extundelete packaged and moving to [community]
git-svn-id: file:///srv/repos/svn-community/svn@20292 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,11 +5,11 @@
 pkgname=extundelete
 pkgver=0.2.0
 pkgrel=1
-pkgdesc="An utility that can recover deleted files (undelete them) from ext2, ext3 or ext4 partitions by parsing the journal (similar to ext3grep)"
+pkgdesc="Utility for recovering deleted files from ext2, ext3 or ext4 partitions by parsing the journal"
 arch=('i686' 'x86_64')
 url="http://extundelete.sourceforge.net"
 license=('GPL')
-depends=('e2fsprogs')
+makedepends=('e2fsprogs')
 changelog=$pkgname.changelog
 source=(http://downloads.sourceforge.net/project/$pkgname/$pkgname/$pkgver/$pkgname-$pkgver.tar.bz2)
 md5sums=('6dac74b12a747f133326ff7b81fceedd')
