upgpkg: murmur 1.2.2-1 pushing murmur
git-svn-id: file:///srv/repos/svn-community/svn@22648 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -49,11 +49,11 @@ build() {
     install -dm755 ${pkgdir}/var/run/murmur
     install -Dm755 release/murmurd ${pkgdir}/usr/sbin/murmurd
     install -Dm644 scripts/murmur.ini ${pkgdir}/etc/murmur.ini
-    install -Dm755 ${startdir}/murmur.rc.d ${pkgdir}/etc/rc.d/murmur
-    install -Dm644 ${startdir}/murmur.conf.d ${pkgdir}/etc/conf.d/murmur
-    install -Dm644 ${startdir}/murmur.dbus.conf \
+    install -Dm755 ${srcdir}/murmur.rc.d ${pkgdir}/etc/rc.d/murmur
+    install -Dm644 ${srcdir}/murmur.conf.d ${pkgdir}/etc/conf.d/murmur
+    install -Dm644 ${srcdir}/murmur.dbus.conf \
                       ${pkgdir}/etc/dbus-1/system.d/murmur.conf
-    install -Dm644 ${startdir}/murmur.logrotate.d \
+    install -Dm644 ${srcdir}/murmur.logrotate.d \
                       ${pkgdir}/etc/logrotate.d/murmur
     install -Dm644 README ${pkgdir}/usr/share/doc/murmur/README
     install -Dm644 man/murmurd.1 ${pkgdir}/usr/share/man/man1/murmurd.1
