upgpkg: kaudiocreator 1.2.90-1 upstream release
git-svn-id: file:///srv/repos/svn-community/svn@24995 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,16 +3,17 @@
 # Contributor: Nick B <Shirakawasuna at gmail _dot_com>
 
 pkgname=kaudiocreator
-pkgver=1.2.81
+pkgver=1.2.90
 pkgrel=1
 pkgdesc="A program for ripping and encoding Audio-CDs, encoding files from disk"
 arch=('i686' 'x86_64')
 url="http://www.kde-apps.org/content/show.php/KAudioCreator?content=107645"
 license=('GPL')
-depends=('kdemultimedia-kioslave' 'taglib')
+depends=('kdemultimedia-kioslave' 'taglib' 'libdiscid')
 makedepends=('cmake' 'automoc4')
-source=(http://www.kde-apps.org/CONTENT/content-files/107645-${pkgname}-${pkgver}.tar.bz2)
-md5sums=('3b79421aa945f5e9c50319220522877b')
+install="${pkgname}.install"
+source=("http://www.kde-apps.org/CONTENT/content-files/107645-${pkgname}-${pkgver}.tar.bz2")
+md5sums=('3d86f19700ace837093a134876314862')
 
 build() {
   cd ${srcdir}
@@ -20,12 +21,11 @@ build() {
   cd build
   cmake ../${pkgname}-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_SKIP_RPATH=ON \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make
 }
 
 package() {
   cd ${srcdir}/build
-  make DESTDIR=${pkgdir} install || return 1
+  make DESTDIR=${pkgdir} install
 }
