Dependency fix for next release
git-svn-id: file:///srv/repos/svn-community/svn@40059 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="German Linux man pages"
 arch=('any')
 url="https://alioth.debian.org/projects/manpages-de/"
 license=('custom')
-depends=('man')
+depends=('man-db')
 changelog=$pkgname.changelog
 options=('!emptydirs')
 source=(https://alioth.debian.org/frs/download.php/3463/manpages-de-$pkgver.tar.bz2)
