--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -55,10 +55,8 @@ package() {
     install -Dm644 scripts/murmur.ini ${pkgdir}/etc/murmur.ini
     install -Dm755 ${srcdir}/murmur.rc.d ${pkgdir}/etc/rc.d/murmur
     install -Dm644 ${srcdir}/murmur.conf.d ${pkgdir}/etc/conf.d/murmur
-    install -Dm644 ${srcdir}/murmur.dbus.conf \
-                      ${pkgdir}/etc/dbus-1/system.d/murmur.conf
-    install -Dm644 ${srcdir}/murmur.logrotate.d \
-                      ${pkgdir}/etc/logrotate.d/murmur
+    install -Dm644 ${srcdir}/murmur.dbus.conf ${pkgdir}/etc/dbus-1/system.d/murmur.conf
+    install -Dm644 ${srcdir}/murmur.logrotate.d ${pkgdir}/etc/logrotate.d/murmur
     install -Dm644 README ${pkgdir}/usr/share/doc/murmur/README
     install -Dm644 man/murmurd.1 ${pkgdir}/usr/share/man/man1/murmurd.1
 }
