--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -14,14 +14,14 @@ depends=('avahi' 'lsb-release' 'protobuf' 'qt>=4.4.0')
 makedepends=('boost')
 conflicts=('murmur-ice' 'murmur-static' 'murmur-git')
 backup=("etc/murmur.ini"
-    "etc/logrotate.d/murmur"
-    "etc/conf.d/murmur" )
+        "etc/logrotate.d/murmur"
+        "etc/conf.d/murmur" )
 install="murmur.install"
 source=("http://downloads.sourceforge.net/mumble/mumble-$pkgver.tar.gz"
-    "murmur.rc.d"
-    "murmur.conf.d"
-    "murmur.dbus.conf"
-    "murmur.logrotate.d"
+        "murmur.rc.d"
+        "murmur.conf.d"
+        "murmur.dbus.conf"
+        "murmur.logrotate.d"
 )
 md5sums=('55804e3dfe98b16eeb40abca6c254625'
          'b99061be67c54bf0bb4a061fd1280281'
@@ -31,34 +31,34 @@ md5sums=('55804e3dfe98b16eeb40abca6c254625'
 )
 
 build() {
-    cd ${srcdir}/mumble-$pkgver
+  cd ${srcdir}/mumble-$pkgver
 
-    qmake main.pro CONFIG+="no-client no-ice"
-    make
+  qmake main.pro CONFIG+="no-client no-ice"
+  make release
 }
 
 package() {
-    cd ${srcdir}/mumble-$pkgver
+  cd ${srcdir}/mumble-$pkgver
 
-    sed -e "1i# vi:ft=cfg" \
-        -e "s|database=|database=/var/lib/murmur/murmur.sqlite|" \
-        -e "s|dbus=session|#dbus=system|" \
-        -e "s|#logfile=murmur.log|logfile=/var/log/murmur/murmur.log|" \
-        -e "s|#pidfile=|pidfile=/var/run/murmur/murmur.pid|" \
-        -e "s|#uname=|uname=murmur|" \
-        -i scripts/murmur.ini
+  sed -e "1i# vi:ft=cfg" \
+    -e "s|database=|database=/var/lib/murmur/murmur.sqlite|" \
+    -e "s|dbus=session|#dbus=system|" \
+    -e "s|#logfile=murmur.log|logfile=/var/log/murmur/murmur.log|" \
+    -e "s|#pidfile=|pidfile=/var/run/murmur/murmur.pid|" \
+    -e "s|#uname=|uname=murmur|" \
+    -i scripts/murmur.ini
 
-    install -dm755 ${pkgdir}/var/lib/murmur
-    install -dm755 ${pkgdir}/var/log/murmur
-    install -dm755 ${pkgdir}/var/run/murmur
-    install -Dm755 release/murmurd ${pkgdir}/usr/sbin/murmurd
-    install -Dm644 scripts/murmur.ini ${pkgdir}/etc/murmur.ini
-    install -Dm755 ${srcdir}/murmur.rc.d ${pkgdir}/etc/rc.d/murmur
-    install -Dm644 ${srcdir}/murmur.conf.d ${pkgdir}/etc/conf.d/murmur
-    install -Dm644 ${srcdir}/murmur.dbus.conf ${pkgdir}/etc/dbus-1/system.d/murmur.conf
-    install -Dm644 ${srcdir}/murmur.logrotate.d ${pkgdir}/etc/logrotate.d/murmur
-    install -Dm644 README ${pkgdir}/usr/share/doc/murmur/README
-    install -Dm644 man/murmurd.1 ${pkgdir}/usr/share/man/man1/murmurd.1
+  install -dm755 ${pkgdir}/var/lib/murmur
+  install -dm755 ${pkgdir}/var/log/murmur
+  install -dm755 ${pkgdir}/var/run/murmur
+  install -Dm755 release/murmurd ${pkgdir}/usr/sbin/murmurd
+  install -Dm644 scripts/murmur.ini ${pkgdir}/etc/murmur.ini
+  install -Dm755 ${srcdir}/murmur.rc.d ${pkgdir}/etc/rc.d/murmur
+  install -Dm644 ${srcdir}/murmur.conf.d ${pkgdir}/etc/conf.d/murmur
+  install -Dm644 ${srcdir}/murmur.dbus.conf ${pkgdir}/etc/dbus-1/system.d/murmur.conf
+  install -Dm644 ${srcdir}/murmur.logrotate.d ${pkgdir}/etc/logrotate.d/murmur
+  install -Dm644 README ${pkgdir}/usr/share/doc/murmur/README
+  install -Dm644 man/murmurd.1 ${pkgdir}/usr/share/man/man1/murmurd.1
 }
 
 # vim: sw=2:ts=2 et:
