--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=murmur
 pkgver=1.2.3
-pkgrel=1
+pkgrel=2
 pkgdesc="The voice chat application server for Mumble"
 arch=('i686' 'x86_64')
 url="http://mumble.sourceforge.net"
@@ -21,14 +21,12 @@ source=("http://downloads.sourceforge.net/mumble/mumble-$pkgver.tar.gz"
         "murmur.rc.d"
         "murmur.conf.d"
         "murmur.dbus.conf"
-        "murmur.logrotate.d"
-)
+        "murmur.logrotate.d")
 md5sums=('55804e3dfe98b16eeb40abca6c254625'
-         'b99061be67c54bf0bb4a061fd1280281'
+         'eec4ac14524be18738f7caf8140a3611'
          '11c1cc875e8021739ec2087252cf0533'
          'eddea4cdbd0bde4b960a67e16b5d5478'
-         'c56726cb267ead68f37f35c28e36e6fa'
-)
+         'c56726cb267ead68f37f35c28e36e6fa')
 
 build() {
   cd ${srcdir}/mumble-$pkgver
@@ -50,7 +48,6 @@ package() {
 
   install -dm755 ${pkgdir}/var/lib/murmur
   install -dm755 ${pkgdir}/var/log/murmur
-  install -dm755 ${pkgdir}/var/run/murmur
   install -Dm755 release/murmurd ${pkgdir}/usr/sbin/murmurd
   install -Dm644 scripts/murmur.ini ${pkgdir}/etc/murmur.ini
   install -Dm755 ${srcdir}/murmur.rc.d ${pkgdir}/etc/rc.d/murmur
