--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -1,32 +1,31 @@
+# $Id$
 # Maintainer: Alex Filgueira <alexfilgueira (at antergos.com)>
 # Contributor: Nate Simon <aurpkg (at natesimon.net)>
 
 pkgname=xapps
 pkgver=1.0.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Common library for X-Apps project"
 arch=('i686' 'x86_64')
-license=('GPL')
-depends=('libgnomekbd' 'python3')
-makedepends=('gnome-common' 'gobject-introspection')
-provides=($_pkgname)
-conflicts=('xapps-git')
 url='https://github.com/linuxmint/xapps'
-
+license=('GPL')
+depends=('libgnomekbd' 'python')
+makedepends=('gnome-common' 'gobject-introspection')
+options=(!emptydirs)
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/linuxmint/${pkgname}/archive/${pkgver}.tar.gz")
-md5sums=('7d6aed5ca7c015ca0ad5c50e24633bd5')
+sha256sums=('1443e9f319763f8b90749ea9669880005f315af060f7bbaa2b4241b4c4ca49a4')
 
 build() {
-    cd ${srcdir}/${pkgname}-${pkgver}
+    cd ${pkgname}-${pkgver}
 
-    ./autogen.sh --prefix="/usr" \
-        --localstatedir="/var" \
-        --libexecdir="/usr/lib/${pkgname}"
+    ./autogen.sh --prefix=/usr \
+        --localstatedir=/var \
+        --libexecdir=/usr/lib/${pkgname}
     make
 }
 
 package(){
-    cd ${srcdir}/${pkgname}-${pkgver}
-    make DESTDIR="$pkgdir/" install
+    cd ${pkgname}-${pkgver}
+    make DESTDIR="$pkgdir" install
 }
 
