--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Malte Rabenseifner <malte@zearan.de>
 
 pkgname=murmur
-pkgver=1.2.18
-pkgrel=3
+pkgver=1.2.19
+pkgrel=1
 pkgdesc="The voice chat application server for Mumble"
 arch=('i686' 'x86_64')
 url="http://mumble.sourceforge.net"
@@ -17,9 +17,9 @@ install="murmur.install"
 source=(https://github.com/mumble-voip/mumble/releases/download/${pkgver}/mumble-${pkgver}.tar.gz
         "murmur.dbus.conf"
         "murmur.service")
-md5sums=('3c448632142e0f38e693250965e8b6b1'
-         'eddea4cdbd0bde4b960a67e16b5d5478'
-         '776f0f93b82f78114ad66b30d2fd731c')
+sha512sums=('f91111194a899149b500a94afcf7cc5b9691c7ce8669f07fca2c66adbb3916ddb863bf703d04fb8387133fb75f3c8edb52974d1acf3febfafa1f73da19946de4'
+            '97c7effdddec324e40195c36ef4927950a5de26d2ee2d268d89df6fb547207bbbe30292773316cae6f57ec9923244f205fb0edc377b798771ba7385e3c11d86a'
+            '1773802b938ae2a80fa21e26cd33d162f00de00e074af9f1481f1c682ef32756ffdd2384a1d1f5a4202df55a982a80067efa78d7ad4e077bf5c7f7ccfc4399e4')
 
 build() {
   cd ${srcdir}/mumble-$pkgver
