--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=man-pages-de
 pkgver=2.0
-pkgrel=1
+pkgrel=2
 pkgdesc="German Linux man pages"
 arch=('any')
 url="https://alioth.debian.org/projects/manpages-de/"
@@ -26,4 +26,7 @@ package() {
   cd "${srcdir}"/manpages-de-$pkgver
 
   make DESTDIR="${pkgdir}" install
+
+#duplicates
+rm "${pkgdir}"/usr/share/man/de/man1/groups.1.gz #shadow
 }
