--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=haskell-gtk
 pkgver=0.14.6
-pkgrel=4
+pkgrel=5
 pkgdesc="Binding to the gtk library for Gtk2Hs."
 url="https://hackage.haskell.org/package/gtk3"
 license=('LGPL2.1')
@@ -14,7 +14,7 @@ provides=('gtk2hs-gtk')
 replaces=('gtk2hs-gtk')
 conflicts=('gtk2hs-gtk')
 source=("https://github.com/gtk2hs/gtk2hs/archive/843d83548bd076975f1869e6768768b5ed24b268.tar.gz")
-sha256sums=('1de00973cf66154605411892c77b232b0066c98ab2d562595ded3d9d95c4c547')
+sha512sums=('610a080ddf8ad8511176a7fd5ed5457aa26b5ce48539b7eb46563d86db1ffab6501f8b4deac4152f7d9cea84093de34e1bd1bb9467f558f1c202026337e1c708')
 
 prepare() {
     mv gtk2hs-843d83548bd076975f1869e6768768b5ed24b268/gtk gtk3-$pkgver
@@ -23,7 +23,7 @@ prepare() {
 build() {
     cd "${srcdir}/gtk3-${pkgver}"
 
-    runhaskell Setup configure -O --enable-shared --enable-executable-dynamic \
+    runhaskell Setup configure -O --enable-shared --enable-executable-dynamic --disable-library-vanilla \
         --prefix=/usr --docdir="/usr/share/doc/${pkgname}" --datasubdir="$pkgname" \
         --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid
     runhaskell Setup build
@@ -39,7 +39,4 @@ package() {
     install -D -m744 register.sh   "${pkgdir}/usr/share/haskell/register/${pkgname}.sh"
     install -D -m744 unregister.sh "${pkgdir}/usr/share/haskell/unregister/${pkgname}.sh"
     runhaskell Setup copy --destdir="${pkgdir}"
-
-    # Remove static libs
-    find "$pkgdir"/usr/lib -name "*.a" -delete
 }
