--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -5,12 +5,12 @@
 
 pkgname=murmur
 pkgver=1.2.19
-pkgrel=6
+pkgrel=7
 pkgdesc="The voice chat application server for Mumble"
 arch=('i686' 'x86_64')
 url="http://mumble.sourceforge.net"
 license=('BSD')
-depends=('avahi' 'lsb-release' 'protobuf' 'qt4' 'icu')
+depends=('avahi' 'lsb-release' 'protobuf' 'qt4' 'icu' 'zeroc-ice')
 makedepends=('boost')
 backup=("etc/murmur.ini")
 install="murmur.install"
@@ -21,10 +21,17 @@ sha512sums=('f91111194a899149b500a94afcf7cc5b9691c7ce8669f07fca2c66adbb3916ddb86
             '97c7effdddec324e40195c36ef4927950a5de26d2ee2d268d89df6fb547207bbbe30292773316cae6f57ec9923244f205fb0edc377b798771ba7385e3c11d86a'
             '1773802b938ae2a80fa21e26cd33d162f00de00e074af9f1481f1c682ef32756ffdd2384a1d1f5a4202df55a982a80067efa78d7ad4e077bf5c7f7ccfc4399e4')
 
+prepare() {
+  cd ${srcdir}/mumble-$pkgver
+
+  sed -i "s|/usr/local/share/Ice|/usr/share/ice/slice|g" src/murmur/murmur.pro
+  sed -i "s|-lIceUtil|-lIce|g" src/murmur/murmur.pro
+}
+
 build() {
   cd ${srcdir}/mumble-$pkgver
 
-  qmake-qt4 main.pro CONFIG+="no-client no-ice"
+  qmake-qt4 main.pro CONFIG+="no-client"
   make release
 }
 
