--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -4,16 +4,16 @@
 # Contributor: Yosef Or Boczko <yoseforb@gnome.org>
 
 pkgname=gnome-software
-pkgver=3.24.3+13+g836d2ee8
+pkgver=3.26.1+11+ge1ede3c6
 pkgrel=1
 pkgdesc="GNOME Software Tools"
 arch=(i686 x86_64)
 license=(GPL2)
 url="https://wiki.gnome.org/Apps/Software/"
 depends=(gtk3 appstream-glib libsoup gsettings-desktop-schemas gnome-desktop flatpak
-         packagekit archlinux-appstream-data gtkspell3 libgudev fwupd)
-makedepends=(intltool python docbook-xsl gnome-common git valgrind)
-_commit=836d2ee85991e968c3cb38a006df344aa5493c2c  # gnome-3-24
+         packagekit archlinux-appstream-data gtkspell3 libgudev fwupd liboauth)
+makedepends=(python docbook-xsl git valgrind meson gobject-introspection gtk-doc)
+_commit=e1ede3c607cf2123b67cccc9185b5a1c1ed5a69d  # gnome-3-26
 source=("git+https://git.gnome.org/browse/gnome-software#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -23,28 +23,20 @@ pkgver() {
 }
 
 prepare() {
+  mkdir build
   cd $pkgname
-  NOCONFIGURE=1 ./autogen.sh
+
+  # fwupd 1.0
+  git cherry-pick -n 798e1ab89 6f17aab14 166a010ba a2eaf2d29 781c81721
 }
 
 build() {
-  cd $pkgname
-  ./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --localstatedir=/var \
-    --libexecdir=/usr/lib/$pkgname \
-    --disable-static \
-    --disable-schemas-compile \
-    --enable-packagekit \
-    --enable-flatpak \
-    --enable-firmware \
-    --enable-gtk-doc
-  sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
-  make
+  cd build
+  arch-meson ../$pkgname -Denable-rpm=false
+  ninja
 }
 
 package() {
-  cd $pkgname
-  make DESTDIR="${pkgdir}" install
+  cd build
+  DESTDIR="$pkgdir" ninja install
 }
