--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=haskell-gtk
 pkgver=0.15.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Binding to the gtk library for Gtk2Hs."
 url="https://hackage.haskell.org/package/gtk3"
 license=('LGPL2.1')
@@ -19,7 +19,7 @@ build() {
     cd "${srcdir}/gtk3-${pkgver}"
 
     runhaskell Setup configure -O --enable-shared --enable-executable-dynamic --disable-library-vanilla \
-        --prefix=/usr --docdir="/usr/share/doc/${pkgname}" --datasubdir="$pkgname" \
+        --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir="$pkgname" \
         --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid
     runhaskell Setup build
     runhaskell Setup register --gen-script
@@ -31,7 +31,7 @@ build() {
 package() {
     cd "${srcdir}/gtk3-${pkgver}"
 
-    install -D -m744 register.sh   "${pkgdir}/usr/share/haskell/register/${pkgname}.sh"
-    install -D -m744 unregister.sh "${pkgdir}/usr/share/haskell/unregister/${pkgname}.sh"
-    runhaskell Setup copy --destdir="${pkgdir}"
+    install -D -m744 register.sh "$pkgdir"/usr/share/haskell/register/$pkgname.sh
+    install -D -m744 unregister.sh "$pkgdir"/usr/share/haskell/unregister/$pkgname.sh
+    runhaskell Setup copy --destdir="$pkgdir"
 }
