--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Jaroslav Lichtblau <svetlemodry@archlinux.org>
 
 pkgname=man-pages-de
-pkgver=2.9
+pkgver=2.10
 pkgrel=1
 pkgdesc="German Linux man pages"
 arch=('any')
@@ -12,12 +12,12 @@ makedepends=('po4a')
 changelog=$pkgname.changelog
 options=('!emptydirs')
 source=(https://salsa.debian.org/manpages-de-team/manpages-de/-/archive/v$pkgver/manpages-de-v${pkgver}.tar.bz2)
-sha256sums=('a259496d5e80db40bba173671706dae14adb516b26a89672819541645b4705b3')
+sha256sums=('2bba8c1070470347153f2d5eaff068dfb03afc431573b6f0fab6bfe9cbc9ec29')
 
 build() {
   cd "${srcdir}"/manpages-de-v$pkgver
 
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --enable-distribution=archlinux
   make
 }
 
@@ -25,7 +25,4 @@ package() {
   cd "${srcdir}"/manpages-de-v$pkgver
 
   make DESTDIR="${pkgdir}" install
-
-#duplicate page included in the shadow package
-rm "${pkgdir}"/usr/share/man/de/man1/groups.1.gz
 }
