--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=murmur
 pkgver=1.2.19
-pkgrel=12
+pkgrel=13
 pkgdesc="The voice chat application server for Mumble"
 arch=('x86_64')
 url="http://mumble.sourceforge.net"
@@ -48,7 +48,7 @@ package() {
   install -dm755 -o 122 -g 122 "${pkgdir}"/var/db/murmur
   install -Dm755 release/murmurd "${pkgdir}"/usr/bin/murmurd
   install -Dm644 scripts/murmur.ini "${pkgdir}"/etc/murmur.ini
-  install -Dm644 "${srcdir}"/murmur.dbus.conf "${pkgdir}"/etc/dbus-1/system.d/murmur.conf
+  install -Dm644 "${srcdir}"/murmur.dbus.conf "${pkgdir}"/usr/share/dbus-1/system.d/murmur.conf
   install -Dm644 README "${pkgdir}"/usr/share/doc/murmur/README
   install -Dm644 man/murmurd.1 "${pkgdir}"/usr/share/man/man1/murmurd.1
   install -Dm644 "${srcdir}"/murmur.service "${pkgdir}"/usr/lib/systemd/system/murmur.service
