--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=electron5
 pkgver=5.0.13
 _commit=f5fab127ca0eff5336e6cd469c794fdb9e3330b4
 _chromiumver=73.0.3683.121
-pkgrel=3
+pkgrel=4
 pkgdesc='Build cross platform desktop apps with web technologies'
 arch=('x86_64')
 url='https://electronjs.org/'
@@ -27,6 +27,8 @@ source=('git+https://github.com/electron/electron.git'
         'chromium-media-fix-build-with-libstdc++.patch'
         'chromium-skia-harmony.patch'
         'icu65.patch'
+        'simplified-ListFormat-implementation.patch'
+        'glslang-remove-setAllocator.patch'
         'chromium-system-icu.patch'
         'chromium-webrtc-fix-SIOCGSTAMP-include.patch'
        )
@@ -40,6 +42,8 @@ sha256sums=('SKIP'
             'f51fe91427d8638c5551746d2ec7de99e8059dd76889cfeaee8ca3d8fed62265'
             '5887f78b55c4ecbbcba5930f3f0bb7bc0117c2a41c2f761805fcf7f46f1ca2b3'
             '1de9bdbfed482295dda45c7d4e323cee55a34e42f66b892da1c1a778682b7a41'
+            '49cb3444eae2bf8aa83b4f8704023512dba4bf30f3caafc6dbd5ed874b7da72b'
+            '06738b3f2d3579cd9b4d1ff876ba93d6b10a741b4deb4eab7fe3008cc577c893'
             'e2d284311f49c529ea45083438a768db390bde52949995534034d2a814beab89'
             'f73a3226b60833f7cc12f2bd8e3569284e6c26ea6cdd97eb5f45797ed29a323a')
 
@@ -140,6 +144,9 @@ prepare() {
   patch -d media -Np1 -i ../../chromium-media-fix-build-with-libstdc++.patch
   patch -Np0 -i ../chromium-skia-harmony.patch
   patch -Np1 -i ../icu65.patch
+  patch -Np1 -d v8 <../simplified-ListFormat-implementation.patch
+  patch -Np1 -d third_party/glslang/src <../glslang-remove-setAllocator.patch
+  patch -Np1 -d third_party/angle/third_party/glslang/src <../glslang-remove-setAllocator.patch
   patch -Np1 -i ../chromium-system-icu.patch
   patch -Np1 -i ../chromium-webrtc-fix-SIOCGSTAMP-include.patch
   patch -Np1 -i ../use-system-libraries-in-node.patch
