--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,22 +1,25 @@
 # Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
 
 pkgname=terraform-provider-keycloak
-pkgver=1.16.0
+pkgver=1.18.0
 pkgrel=1
 pkgdesc="Terraform provider for Keycloak"
 url="https://github.com/mrparkers/terraform-provider-keycloak"
 arch=("x86_64")
 license=("MPL")
-makedepends=("go-pie" "git")
-source=("https://github.com/mrparkers/terraform-provider-keycloak/archive/$pkgver.tar.gz")
-sha256sums=('689dec42a26eb34ed1fbdabc6c97fe9c0f7f5cd0ea68fee8dfa776c8a5504480')
+makedepends=("go-pie")
+source=("$pkgname-$pkgver.tar.gz::https://github.com/mrparkers/terraform-provider-keycloak/archive/$pkgver.tar.gz")
+sha256sums=('0066f5ede91650ebe71b2981933de6cfd6f2c9da90d5fbfaf42cb6d53ce28fb4')
 
 build() {
-    cd $pkgname-$pkgver
-    GO111MODULE=on go mod download && make build
+  export CGO_LDFLAGS="${LDFLAGS}"
+  export GOFLAGS="-trimpath"
+
+  cd $pkgname-$pkgver
+  go build .
 }
 
 package() {
-    cd $pkgname-$pkgver
-    install -Dm755 $pkgname "$pkgdir/usr/bin/$pkgname"
+  cd $pkgname-$pkgver
+  install -Dm755 $pkgname "$pkgdir/usr/bin/$pkgname"
 }
